Set up CI with Azure Pipelines
[skip ci]

--- a/devops/iac.yaml
+++ b/devops/iac.yaml
@@ -7,8 +7,8 @@ trigger:
     - environment
 
 variables:
-  newResourceGroupName: apim
-  resourcePrefix: apimBase
+  newResourceGroupName: apimws
+  resourcePrefix: apimws
   sqlAdministratorLoginPassword: ComplexPs123#$
   apimPublisherEmail: youremail@outlook.com
 
